Fix button position on mobile and fix code review comments

--- a/live/app/styles/components/_navbar-header.scss
+++ b/live/app/styles/components/_navbar-header.scss
@@ -237,7 +237,7 @@
 }
 
 .navbar-item-inscription-wrapper {
-  margin-top: 90%;
+  margin-top: 35vh;
   border: none;
 
   @include device-is('desktop') {
